--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 /*header*/
-header {
+header{
     padding: 20px 35px;
     background-color: #fff;
 }
@@ -57,10 +57,26 @@ header li {
     font-weight: lighter;
 }
 
-#portfolio {
+.topic-style {
+    padding: 20px;
     max-width: 600px;
-    margin-left: auto;
     margin-right: auto;
-    text-align: justify;
-    color: #fff;
+    margin-left: auto;
+    font-size: 30px;
+    color: black;
+    text-align: center;
+    background-color: #fff;
+}
+
+/*portfolio*/
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+footer {
+    padding: 20px 35px;
+    background-color: #fff
 }
